--- a/index.html
+++ b/index.html
@@ -7,18 +7,6 @@
   <link rel="stylesheet" href="assets/base.css">
 </head>
 <body>
-  <script type="text/template" id="item-template"></script>
-  <script type="text/template" id="stats-template"></script>
-  <script src="js/lib/jquery.min.js"></script>
-  <script src="js/lib/underscore-min.js"></script>
-  <script src="js/lib/backbone-min.js"></script>
-  <script src="js/lib/backbone.localStorage.js"></script>
-  <script src="js/models/todo.js"></script>
-  <script src="js/collections/todos.js"></script>
-  <script src="js/views/todos.js"></script>
-  <script src="js/views/app.js"></script>
-  <script src="js/routers/router.js"></script>
-  <script src="js/app.js"></script>
   <section id="todoapp">
     <header id="header">
       <h1>todos</h1>
@@ -29,38 +17,49 @@
       <label for="toggle-all">Mark all as complete</label>
       <ul id="todo-list"></ul>
     </section>
+    <footer id="footer"></footer>
   </section>
-  <div id="info">
+  <footer id="info">
     <p>Double-click to edit a todo</p>
-    <p>Written by <a href="https://github.com/snowmanzzz">赵正中</a></p>
+    <p>Written by <a href="https://github.com/addyosmani">Addy Osmani & Snowmanzzz</a></p>
     <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-  </div>
+  </footer>
   <script type="text/template" id="item-template">
-    <div class="view">
-    <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
-    <label><%- title %></label>
-    <button class="destroy"></button>
-    </div>
-    <input class  ="edit" value="<%- title %>">
+  <div class="view">
+  <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
+  <label><%- title %></label>
+  <button class="destroy"></button>
+  </div>
+  <input class="edit" value="<%- title %>">
   </script>
-
   <script type="text/template" id="stats-template">
-<span id="todo-count"><strong><%= remaining %></strong> <%= remaining === 1 ? 'item' :
-'items' %> left</span>
-<ul id="filters">
-<li>
-<a class="selected" href="#/">All</a>
-</li>
-<li>
-<a href="#/active">Active</a>
-</li>
-<li>
-<a href="#/completed">Completed</a>
-</li>
-</ul>
-<% if (completed) { %>
-<button id="clear-completed">Clear completed (<%= completed %>)</button>
-<% } %>
-</script>
-</body>
-</html>
+  <span id="todo-count"><strong><%= remaining %></strong> <%= remaining === 1 ? 'item' : 'items' %> left</span>
+  <ul id="filters">
+  <li>
+  <a class="selected" href="#/">All</a>
+  </li>
+  <li>
+  <a href="#/active">Active</a>
+  </li>
+  <li>
+  <a href="#/completed">Completed</a>
+  </li>
+  </ul>
+  <% if (completed) { %>
+    <button id="clear-completed">Clear completed (<%= completed %>)</button>
+    <% } %>
+    </script>
+    <script type="text/template" id="item-template"></script>
+    <script type="text/template" id="stats-template"></script>
+    <script src="js/lib/jquery.min.js"></script>
+    <script src="js/lib/underscore-min.js"></script>
+    <script src="js/lib/backbone-min.js"></script>
+    <script src="js/lib/backbone.localStorage.js"></script>
+    <script src="js/models/todo.js"></script>
+    <script src="js/collections/todos.js"></script>
+    <script src="js/views/todos.js"></script>
+    <script src="js/views/app.js"></script>
+    <script src="js/routers/router.js"></script>
+    <script src="js/app.js"></script>
+  </body>
+  </html>
